--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@
 
 ------------------------------------------------------------------*/
 
-@import url('http://fonts.googleapis.com/css?family=Playfair+Display:400,700');
-@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
+/*@import url('http://fonts.googleapis.com/css?family=Playfair+Display:400,700');*/
+/*@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');*/
 
 body {
     background: rgb(239, 239, 239);
