--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
 body {
     background: rgb(239, 239, 239);
     font-family: 'Source Sans Pro', sans-serif;
+    /*font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
     font-style: normal;
     font-weight: 400;
     overflow-x: hidden;
@@ -90,7 +91,28 @@ p {
     font-size: 14px;
     font-weight: 300;
     line-height: 28px;
+}
+
+.project-h3-title{
+    color: #333;
+    font-size: 30px;
+    font-weight: 200px;
+    line-height: 52px;
+    text-align: left;
+}
+.project-intro{
+    color: #333;
+    font-size: 20px;
+    font-weight: 250;
+    font-family: Times;
+    line-height: 1.4;
     letter-spacing: 0.2px;
+    text-align: left;
+}
+
+.project-intro-title{
+    color: #333;
+    text-align: left;
 }
 
 .font-playfair {
