--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,9 @@ p {
     font-weight: 300;
     line-height: 28px;
 }
-
+.highlight-words{
+    color: #ff7781;
+}
 .project-h3-title{
     color: #333;
     font-size: 30px;
